--- a/src/main/webapp/pag/agenda.xhtml
+++ b/src/main/webapp/pag/agenda.xhtml
@@ -2,13 +2,19 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
     xmlns:h="http://xmlns.jcp.org/jsf/html" 
-    xmlns:p="http://primefaces.org/ui" >
+    xmlns:p="http://primefaces.org/ui"
+    xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 <h:head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <h:outputStylesheet library="css" name="config.css"/>
 <title>Agenda</title>
 </h:head>
 <h:body>
+<ui:include src="/include/dialog/add.xhtml"/>
+
+<h:form>
+
+    <p:commandButton value="Novo Contato" oncomplete="PF('addContato').show();"/>
 
     <p:dataTable emptyMessage="Nenhum contato encontrado." 
         paginatorTemplate="{FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink}"
@@ -20,6 +26,8 @@
 		<p:column headerText="Senha Wifi"></p:column>
 		
     </p:dataTable>
+
+</h:form>
 
 </h:body>
 </html>
