renomeado add > merge_contato

--- a/src/main/webapp/pag/agenda.xhtml
+++ b/src/main/webapp/pag/agenda.xhtml
@@ -12,7 +12,7 @@
 </h:head>
 <h:body>
 
-<ui:include src="/include/dialog/add.xhtml"/>
+<ui:include src="/include/dialog/merge_contato.xhtml"/>
 <ui:include src="/include/dialog/confirm_dialog.xhtml"/>
 
 <p:growl id="status" showDetail="true" life="5000"/>
